// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListHeader applies default class names 1`] = `
<View
  className="bg-background"
>
  <View
    testID="header-view"
  />
</View>
`;

exports[`ListHeader merges custom className with default className 1`] = `
<View
  className="bg-background custom-class"
>
  <View
    testID="header-view"
  />
</View>
`;
